// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageRow /> when there are images, images are rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <TouchableHighlight
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo/bar.png",
        }
      }
      style={
        Object {
          "flex": 0.4,
          "height": 300,
          "margin": 10,
          "width": 300,
        }
      }
    />
  </TouchableHighlight>
  <TouchableHighlight
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "baz/foo.png",
        }
      }
      style={
        Object {
          "flex": 0.4,
          "height": 300,
          "margin": 10,
          "width": 300,
        }
      }
    />
  </TouchableHighlight>
</View>
`;

exports[`<ImageRow /> when there is no images, empty image buttons are rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <IconButton
    backgroundColor="transparent"
    color="gray"
    name="add-a-photo"
    onPress={[Function]}
    size={225}
    style={
      Object {
        "backgroundColor": "white",
        "elevation": 1,
        "flex": 0.4,
        "height": 300,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      }
    }
  />
  <IconButton
    backgroundColor="transparent"
    color="gray"
    name="add-a-photo"
    onPress={[Function]}
    size={225}
    style={
      Object {
        "backgroundColor": "white",
        "elevation": 1,
        "flex": 0.4,
        "height": 300,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      }
    }
  />
</View>
`;
